--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-@import url(header.css);
+
+@import url("style/header.css");
+@import url("style/banner.css");
+
 
 :root{
     --cor-de-fundo: #ebecee;
