--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
-
+@import url("style/carrossel.css");
 @import url("style/header.css");
 @import url("style/banner.css");
 
-
-:root{
-    --cor-de-fundo: #ebecee;
-    --branco: #fff;
-    --laranja: #eb9b00;
-    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
-    --font-principal: "Poppins";
+:root {
+    --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: "Poppins";
+    --azul: #002F52;
 }
 
-body{
+body {
     background-color: var(--cor-de-fundo);
-    font-family: var(--font-principal);
+    font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
 }
